--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Alison Luiz da Silva, Andre Fragalli Vassoler",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "pg": "^8.11.5",
