--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:autocannon": "autocannon -c 1000 -d 10 -R http://localhost:3000/series http://localhost:3000/creators http://localhost:3000/characters http://localhost:3000/comics"
   },
   "keywords": [],
   "author": "Alison Luiz da Silva, Andre Fragalli Vassoler",
@@ -27,6 +28,7 @@
     "@types/node": "^20.12.8",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "autocannon": "^7.15.0",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
