--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node main.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "test:autocannon": "autocannon -c 1000 -d 10 -R http://localhost:3000/series http://localhost:3000/creators http://localhost:3000/characters http://localhost:3000/comics"
+    "test:autocannon": "autocannon -c 1000 -d 10 --renderStatusCode http://localhost:3000/series http://localhost:3000/creators http://localhost:3000/characters http://localhost:3000/comics"
   },
   "keywords": [],
   "author": "Alison Luiz da Silva, Andre Fragalli Vassoler",
